--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Música para todos - Spotify</title>
+    <link rel="icon" href="imagens/favicon.png">
 
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +21,40 @@
   </head>
   <body>
 
+    <nav class="navbar navbar-fixed-top navbar-inverse navbar-transparente">
+      <div class="container">
+
+        <!-- header -->
+        <div class="navbar-header">
+
+          <!-- botao toggle -->
+          <button type="button" class="navbar-toggle collapsed"
+                  data-toggle="collapse" data-target="#barra-navegacao">
+            <span class="sr-only">alterar navegação</span> <!-- atributo de acessibilidade-->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+          <a href="index.html" class="navbar-brand">
+            <span class="img-logo">Spotify</span>
+          </a>
+        </div>
+
+        <!-- navbar -->
+        <div class="collapse navbar-collapse" id="barra-navegacao">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="">Premium</a></li>
+            <li><a href="">Ajuda</a></li>
+            <li><a href="">Baixar</a></li>
+            <li class="divisor" role="separator"></li>
+            <li><a href="">Inscrever-se</a></li>
+            <li><a href="">Entrar</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </nav>
     
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
