--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
 
       </div>
     </nav>
+
+    <!-- capa / sessao 1 -->
+    <div class="capa">
+      <div class="texto-capa">
+        <h1>Música para todos</h1>
+        <a href="" class="btn btn-custom btn-roxo btn-lg">Aproveite o Spotify Free</a>
+        <a href="" class="btn btn-custom btn-branco btn-lg">Obter Spotify Premium</a>
+      </div>
+    </div>
+
     
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
