--- a/index.html
+++ b/index.html
@@ -65,6 +65,90 @@
       </div>
     </div>
 
+    <!-- Conteúdos -->
+    <section id="servicos">
+      <div class="container">
+        <div class="row">
+
+          <!-- Álbuns -->
+          <div class="col-md-6"> 
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="imagens/img1.jpg" class="img-responsive">
+              </div>
+
+              <div class="col-md-6">
+                <img src="imagens/img2.jpg" class="img-responsive">
+              </div>
+            </div>
+
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="imagens/img3.jpg" class="img-responsive">
+              </div>
+
+              <div class="col-md-6">
+                <img src="imagens/img4.jpg" class="img-responsive">
+              </div>
+            </div>
+          </div>
+
+          <!-- Servicos -->
+          <div class="col-md-6"> 
+            <h2>O que o Spotify tem?</h2>
+
+            <h3>Músicas</h3>
+            <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+
+            <h3>Playlists</h3>
+            <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+
+            <h3>Novos lançamentos</h3>
+            <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="recursos">
+      <div class="container">
+        <div class="row">
+
+          <!-- recursos -->
+          <div class="col-md-4">
+            <h2>Fácil</h2>
+
+            <h3>Buscar</h3>
+            <p>Já sabe o que quer escutar? É só procrurar e apertar o play.</p>
+
+            <h3>Navegar</h3>
+            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento</p>
+
+            <h3>Descobrir</h3>
+            <p>Ouça músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios</p>
+          </div>
+
+          <!-- img recursos -->
+          <div class="col-md-8">
+
+            <div class="row rotacionar">
+
+              <div class="col-md-6">
+                <img src="imagens/iphone1.png" class="img-responsive">
+              </div>
+
+              <div class="col-md-6">
+                <img src="imagens/iphone1.png" class="img-responsive">
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </section>
     
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
